--- a/src/Pages/Login/Styles/Login.css
+++ b/src/Pages/Login/Styles/Login.css
@@ -4,22 +4,6 @@
 	color: #676fe0;
 } 
 
-/* * {
-	box-sizing: border-box;	
-	padding: 0;
-	margin: 0;
-}
-
-body{
-	box-sizing: border-box;
-	text-align: center;
-	justify-content: center;
-	
-} */
-/* .containerLog{
-	height: auto;
-	padding: 5%;
-} */
 /* Estilos navbar */
 .nav-item {
 	font-size: 25px;
@@ -34,9 +18,7 @@ body{
 	font-size: 15px;
 }
 
-.allbar {
-	display: flex;
-}
+
 
 .barSearch {
 	width: 400px;
@@ -57,13 +39,21 @@ body{
 /* Login styles */
 .containerLog {
 	background-color: #ee9c30;
-	height: auto;
-	padding: 5%;
+	height: 100vh;
+	position: absolute;
 }
-
+.fullWidthBackground {
+	background-color: #ee9c30;
+	/* position: absolute; */
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+  }
+  
 .divcard {
 	width: 70%;
-	height: 80%;
 	margin: auto;
 	justify-content: center;
 	text-align: center;
