Login FIXED Styles

--- a/src/Pages/Login/Styles/Login.css
+++ b/src/Pages/Login/Styles/Login.css
@@ -44,12 +44,12 @@
 }
 .fullWidthBackground {
 	background-color: #ee9c30;
-	/* position: absolute; */
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: -1;
+	z-index: 1;
   }
   
 .divcard {
