--- a/src/Pages/PagesSeller/Sales/Styles/Sales.css
+++ b/src/Pages/PagesSeller/Sales/Styles/Sales.css
@@ -1,13 +1,5 @@
 
 
-
-
-
-
-
-
-
-
 .inputEntry{
     width: 30%;
     margin: auto auto;
@@ -18,6 +10,22 @@
     cursor: pointer;
 
 
+}
+.background {
+    background-color: #ee9c30;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow: auto;
+    scroll-behavior: smooth;
+  }
+  
+
+.DivNombre{
+    width: 60%;
 }
 .DivInformacion{
     width: 60%;
@@ -32,14 +40,9 @@
     width: 60%;
 }
 
-
-
-
 /*drag and drop*/
 .DivImg{
-   width: 50%;
-    
-   
+   width: 60%;
 }
 .drop-area{
     border: 5px dashed #ddd;
@@ -53,11 +56,9 @@
     margin: auto auto;
 
 }
-
 .dragandDrop{
     font-size: 10px;
 }
-
 
 .drop-area.active{
     background-color: #b8d4fe;
@@ -70,12 +71,10 @@
     font-weight: 500;
     color: #000;
 }
-
 .drop-area span{
     font-size: 25px;
     color: #000;
 }
-
 .drop-area button{
     padding: 10px 25px;
     font-size: 20px;
@@ -87,7 +86,6 @@
     cursor: pointer;    
     margin: 20px;
 }
-
 .file-container
 {
     display: flex;
@@ -96,7 +94,6 @@
     padding: 10px;
     border: solid 1px #ddd;
 }
-
 #preview{
     margin-top: 10px;
 }
@@ -104,11 +101,13 @@
 .status-text{
     padding: 0 10px;
 }
-
 .success{
     color: green;
 }
 .failure{
     color: red;
 }
-
+.buttonProduct{
+    
+    margin: auto auto;
+}
