--- a/src/Pages/SignUp/SignUpShopper/Styles/SignUpShopper.css
+++ b/src/Pages/SignUp/SignUpShopper/Styles/SignUpShopper.css
@@ -15,9 +15,12 @@
     color: #ffff;
     margin: auto ;
     width: 70%;
+    font-size: 12px;
 }
 
-
+.input1{
+    font-size: 10px;
+}
 
 .card-header{
     color: black;
