FIXED Quantity [Cart]

--- a/src/Pages/Product/Components/Styles/CardProduct.css
+++ b/src/Pages/Product/Components/Styles/CardProduct.css
@@ -40,6 +40,7 @@
 .product-info button {
 
   color: white;
+  background-color: #4CAF50;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
