--- a/src/Pages/PagesShopper/MyPurchases/Styles/Mypurchases.css
+++ b/src/Pages/PagesShopper/MyPurchases/Styles/Mypurchases.css
@@ -3,34 +3,137 @@
     margin: auto auto;
     text-align: center;
     justify-content: center;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap:16px;
     margin: 5%;
         cursor: pointer;
+    padding: 15px,red;
+    
 }
 
-.purchase-card{
-    margin: auto auto;
-    text-align: center;
-    justify-content: center;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap:16px;
-    margin: 5%;
-        cursor: pointer;
-}
+    .purchase-card{
+        border-color: black;
+        border-radius: 5px;
+        border-width: 2px;
+        border-style: solid;
+        margin: auto auto;
+        text-align: center;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap:1px;
+        margin: 5%;
+            cursor:default;
+        align-items: center;
+    }
 
-.product-show{
-    margin: auto auto;
-    text-align: center;
-    justify-content: center;
-    display: grid;
-}
+        .stack-1{
+            color: rgb(0, 0, 0);
+            padding-top: 15px;
+            padding-left: 10px;
+            padding-right: 10px;
+            
+        }
 
-.ID{
-   margin: auto;
-   display: inline;
-   justify-content: center;
-   color: red;
-}
+            .ID-purchase{
+                display: left;
+                font-size: 20px;
+                padding: 0;
+            }
+
+            .date-time{
+                margin: auto;
+                display: flex;
+                font-size: 20px;
+            }
+
+            .total-value{
+                color:red;
+                margin: auto;
+                display: left;
+                font-size: 20px;
+            }
+
+        .stack-2{
+            color: rgb(90, 90, 90);
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+            .sub-titles-quantity{
+                font-size:20px;
+                font-style: italic;
+            }
+
+            .sub-titles-image{
+                font-size:20px;
+                font-style: italic;
+                margin-inline-start: 80px;
+            }
+
+            .sub-titles-product{
+                font-size:20px;
+                font-style: italic;
+                margin-inline-start: 125px;
+            }
+
+            .sub-titles-basePrice{
+                font-size:20px;
+                font-style: italic;
+                margin-inline-start: 125px;
+            }
+
+            .sub-titles-Final{
+                font-size:20px;
+                font-style: italic;
+                margin-inline-start: 100px;
+            }
+
+        
+
+            .quantity{
+                margin-left:3%;
+            }
+
+    .product-show{
+        display: center;
+        font-size: 18px;
+    }
+
+        .stack-3{
+            margin-top:15px;
+            color:black; 
+            padding:10px;            
+        }
+
+            .quantity{
+                font-size: 20px;
+                margin-left: 35px;
+            }
+
+            .image{
+                border:3px solid black;
+                border-radius: 5px;
+                border-width: 2px;
+                max-width: 80px; 
+                max-height: 80px;
+
+            }
+
+            .product-name{
+                font-size: 20px;
+                justify-self: center;
+            }
+
+            .base-price{           
+                font-size: 20px;
+                justify-content: center;
+            }
+
+            .final-price{
+                border-radius: 0px;
+                border-color: red;
+                border-width: 1px;
+                border-style: solid;
+                color:red;
+                font-size: 20px;
+                justify-content: center;
+            }
+
+    
