--- a/src/Pages/PagesShopper/MyPurchases/Styles/Mypurchases.css
+++ b/src/Pages/PagesShopper/MyPurchases/Styles/Mypurchases.css
@@ -1,32 +1,30 @@
 .purchase-cards{
-    /* display: flex; */
-    margin: auto auto;
     text-align: center;
     justify-content: center;
-    margin: 5%;
-        cursor: pointer;
-    padding: 15px,red;
+    margin-left: 50px;
+    margin-top: 10px;
+    cursor: pointer;
     
 }
 
     .purchase-card{
-        border-color: black;
+        border-color:rgb(136, 128, 128);
         border-radius: 5px;
-        border-width: 2px;
-        border-style: solid;
+        border-width: 3px;
+        border-style: outset;
         margin: auto auto;
         text-align: center;
         grid-template-columns: repeat(2,1fr);
         grid-gap:1px;
         margin: 5%;
-            cursor:default;
+        cursor:default;
         align-items: center;
     }
 
         .stack-1{
             color: rgb(0, 0, 0);
             padding-top: 15px;
-            padding-left: 10px;
+            padding-left: 40px;
             padding-right: 10px;
             
         }
@@ -52,8 +50,7 @@
 
         .stack-2{
             color: rgb(90, 90, 90);
-            padding-left: 10px;
-            padding-right: 10px;
+            margin-left:40px;
         }
 
             .sub-titles-quantity{
@@ -64,31 +61,21 @@
             .sub-titles-image{
                 font-size:20px;
                 font-style: italic;
-                margin-inline-start: 80px;
             }
 
             .sub-titles-product{
                 font-size:20px;
                 font-style: italic;
-                margin-inline-start: 125px;
             }
 
             .sub-titles-basePrice{
                 font-size:20px;
                 font-style: italic;
-                margin-inline-start: 125px;
             }
 
             .sub-titles-Final{
                 font-size:20px;
                 font-style: italic;
-                margin-inline-start: 100px;
-            }
-
-        
-
-            .quantity{
-                margin-left:3%;
             }
 
     .product-show{
@@ -99,41 +86,48 @@
         .stack-3{
             margin-top:15px;
             color:black; 
-            padding:10px;            
+            padding:auto auto;
+            margin-left:20px;  
+            padding:0.2em;          
         }
 
             .quantity{
                 font-size: 20px;
                 margin-left: 35px;
+                align-self: center;
+                padding: 1em;
             }
 
             .image{
                 border:3px solid black;
                 border-radius: 5px;
-                border-width: 2px;
+                border-width: 1.5px;
+                border-spacing: 1px;
                 max-width: 80px; 
                 max-height: 80px;
+                margin-left: 15px;
+                align-self: center;
 
             }
 
             .product-name{
                 font-size: 20px;
                 justify-self: center;
+                align-self: center;
+                
             }
 
             .base-price{           
-                font-size: 20px;
+                font-size: 16px;
                 justify-content: center;
+                align-self: center;
+
             }
 
             .final-price{
-                border-radius: 0px;
-                border-color: red;
-                border-width: 1px;
-                border-style: solid;
-                color:red;
-                font-size: 20px;
+                font-size: 16px;
                 justify-content: center;
+                align-self: center;
             }
 
     
