--- a/src/Pages/PagesShopper/MyPurchases/Styles/Mypurchases.css
+++ b/src/Pages/PagesShopper/MyPurchases/Styles/Mypurchases.css
@@ -32,102 +32,108 @@
             .ID-purchase{
                 display: left;
                 font-size: 20px;
-                padding: 0;
             }
 
             .date-time{
-                margin: auto;
                 display: flex;
                 font-size: 20px;
+                margin-left:60px;
             }
 
             .total-value{
                 color:red;
-                margin: auto;
                 display: left;
                 font-size: 20px;
+                margin-left:500px;
             }
+                .stack-2{
+                    color:rgb(90, 90, 90);
+                    font-size:20px;
+                    margin-top:20px;
+                }
 
-        .stack-2{
-            color: rgb(90, 90, 90);
-            margin-left:40px;
-        }
+                    .sub-titles-quantity{
+                        font-size:20px;
+                        font-style: italic;
+                        margin-inline-start: 38px;
+                    }
 
-            .sub-titles-quantity{
-                font-size:20px;
-                font-style: italic;
-            }
+                    .sub-titles-image{
+                        font-size:20px;
+                        font-style: italic;
+                        margin-inline-start: 80px;
+                    }
 
-            .sub-titles-image{
-                font-size:20px;
-                font-style: italic;
-            }
+                    .sub-titles-product{
+                        font-size:20px;
+                        font-style: italic;
+                        margin-inline-start: 170px;
+                    }
 
-            .sub-titles-product{
-                font-size:20px;
-                font-style: italic;
-            }
+                    .sub-titles-basePrice{
+                        font-size:20px;
+                        font-style: italic;
+                        margin-inline-start: 255px;
+                    }
 
-            .sub-titles-basePrice{
-                font-size:20px;
-                font-style: italic;
-            }
+                    .sub-titles-Final{
+                        font-size:20px;
+                        font-style: italic;
+                        margin-inline-start: 55px;
+                    }
 
-            .sub-titles-Final{
-                font-size:20px;
-                font-style: italic;
-            }
+                    .product-table{
+                        margin-top:5px;
+                        margin-left:40px;
+                        margin-bottom: 25px;
+                        width:90%;
+                        border-spacing: 30px;
+                        padding:5em;
+                    }
 
-    .product-show{
-        display: center;
-        font-size: 18px;
-    }
+                        .product-show{
+                            display: center;
+                            font-size: 18px;
+                            margin-bottom: 80px; 
+                        }
 
-        .stack-3{
-            margin-top:15px;
-            color:black; 
-            padding:auto auto;
-            margin-left:20px;  
-            padding:0.2em;          
-        }
+                    .quantity{
+                        font-size: 20px;
+                        margin-left: 0px;
+                        align-self: center; 
+                        width: 10%;
+                                       
+                    }
 
-            .quantity{
-                font-size: 20px;
-                margin-left: 35px;
-                align-self: center;
-                padding: 1em;
-            }
+                    .image{
+                        max-width: 80px; 
+                        max-height: 80px;
+                        align-self: center;
+                        margin-left: 80px;
+                        margin-bottom: 7px;  
+                    }
 
-            .image{
-                border:3px solid black;
-                border-radius: 5px;
-                border-width: 1.5px;
-                border-spacing: 1px;
-                max-width: 80px; 
-                max-height: 80px;
-                margin-left: 15px;
-                align-self: center;
+                    .product-name{
+                        font-size: 20px;
+                        margin-left: 0px;
+                        align-self: center;
+                        width: 55%;  
+                        
+                    }
 
-            }
+                    .base-price{           
+                        font-size: 19px;
+                        justify-content: center;
+                        align-self: center;
+                        margin-left: 0px;
+                        width: 30%;  
+                    }
 
-            .product-name{
-                font-size: 20px;
-                justify-self: center;
-                align-self: center;
-                
-            }
-
-            .base-price{           
-                font-size: 16px;
-                justify-content: center;
-                align-self: center;
-
-            }
-
-            .final-price{
-                font-size: 16px;
-                justify-content: center;
-                align-self: center;
-            }
+                    .final-price{
+                        font-size: 19px;
+                        justify-content: center;
+                        align-self: center;
+                        width: 0%;  
+                    }
 
     
