--- a/src/Pages/PagesSeller/Payments/Styles/Payments.css
+++ b/src/Pages/PagesSeller/Payments/Styles/Payments.css
@@ -1,4 +1,4 @@
-.sells-cards{
+.sales-cards{
     border-color:rgb(136, 128, 128);
     border-radius: 5px;
     border-width: 3px;
@@ -61,38 +61,44 @@
                 padding:5em;
             }
 
-                .product-name-seller{
-                    font-size: 20px;
-                    margin-left: 0px;
-                    align-self: center;
-                    width: 38%;  
+                .sales-card{
+                    display: center;
+                    font-size: 18px;
+                    margin-bottom: 0px; 
                 }
 
-                .image-p-seller{
-                    max-width: 80px; 
-                    max-height: 80px;
-                    align-self: center;
-                    margin-left: -20px;
-                    margin-bottom: 7px; 
-                }
-                
-                .quantity-seller{
-                    font-size: 19px;
-                    justify-content: center;
-                    align-self: center;
-                    width: 0;
-                }
+                    .product-name-seller{
+                        font-size: 20px;
+                        margin-left: 0px;
+                        align-self: center;
+                        width: 38%;  
+                    }
 
-                .total-sell-seller{
-                    font-size: 19px;
-                    justify-content: center;
-                    align-self: center;
-                    width:0;
-                }
+                    .image-p-seller{
+                        max-width: 80px; 
+                        max-height: 80px;
+                        align-self: center;
+                        margin-left: -20px;
+                        margin-bottom: 7px; 
+                    }
+                    
+                    .quantity-seller{
+                        font-size: 19px;
+                        justify-content: center;
+                        align-self: center;
+                        width: 0;
+                    }
 
-                .profit-seller{
-                    font-size: 19px;
-                    justify-content: center;
-                    align-self: center;
-                    width: 0;
-                }
+                    .total-sell-seller{
+                        font-size: 19px;
+                        justify-content: center;
+                        align-self: center;
+                        width:0;
+                    }
+
+                    .profit-seller{
+                        font-size: 19px;
+                        justify-content: center;
+                        align-self: center;
+                        width: 0;
+                    }
