Payments [working, FINISHED + clean + redProfit v0.2]

--- a/src/Pages/PagesSeller/Payments/Styles/Payments.css
+++ b/src/Pages/PagesSeller/Payments/Styles/Payments.css
@@ -54,6 +54,7 @@
             margin-inline-start: 65px;
             margin-top: 20px;
             font-weight: 900;
+            color:red;
         }
 
             .sells-table{
