--- a/src/Pages/PagesSeller/Payments/Styles/Payments.css
+++ b/src/Pages/PagesSeller/Payments/Styles/Payments.css
@@ -13,12 +13,14 @@
     justify-content: center;
     align-items: center;
     width: 80%;
+    background-color: #78dc7d;
 }
 
     .subtitle-stack{
-        color:rgb(99, 99, 99);
+        color:rgb(0, 0, 0);
         font-size:10px;
         padding: 2em;
+        
     }
 
         .sub-titles-product-sell{
@@ -26,6 +28,7 @@
             font-style: italic;
             margin-inline-start: 120px;
             margin-top:20px;
+            font-weight: 900;
         }
 
         .sub-titles-image-sell{
@@ -33,12 +36,14 @@
             font-style: italic;
             margin-inline-start: 190px;
             margin-top:20px;
+            font-weight: 900;
         }
 
         .sub-titles-quantity-sell{
             font-size:18px;            
             font-style: italic;
-            margin-inline-start: 75px;
+            margin-inline-start: 70px;
+            font-weight: 900;
         }
     
         .sub-titles-total-sell{
@@ -72,6 +77,8 @@
                     display: auto;
                     font-size: 18px;
                     color:black;
+                    background-color: rgb(255, 255, 255);
+                    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 0px rgb(255, 255, 255), 0.4em 0.3em 1em rgba(0, 0, 0, 0.3);
                 }
 
                     .product-name-seller{
