--- a/src/Pages/PagesSeller/Payments/Styles/Payments.css
+++ b/src/Pages/PagesSeller/Payments/Styles/Payments.css
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     width: 80%;
-    background-color: #78dc7d;
+    background-color: #ee9c30;
 }
 
     .subtitle-stack{
@@ -58,8 +58,8 @@
             font-style: italic;
             margin-inline-start: 65px;
             margin-top: 20px;
-            font-weight: 900;
-            color:red;
+            font-weight: 1000;
+            color:rgb(228, 0, 0);
         }
 
             .sells-table{
